--- a/server/package.json
+++ b/server/package.json
@@ -15,6 +15,7 @@
     "ejs": "~2.6.1",
     "express": "~4.16.1",
     "express-jwt": "^5.3.3",
+    "helmet": "^3.23.3",
     "http-errors": "~1.6.3",
     "jsonwebtoken": "^8.5.1",
     "moment": "^2.27.0",
@@ -22,6 +23,7 @@
     "morgan": "~1.9.1",
     "nodemon": "^2.0.4",
     "socket.io": "^2.3.0",
-    "validator": "^13.1.1"
+    "validator": "^13.1.1",
+    "xss-clean": "^0.1.1"
   }
 }
