--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
     "version": "0.0.0",
     "private": true,
     "scripts": {
-      "start": "node cd server/app.js",
+      "start": "node server/app.js",
       "build": "cd client && npm run build",
       "install-client": "cd client && npm install",
       "heroku-postbuild": "npm run install-client && npm run build"
