--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
     "version": "0.0.0",
     "private": true,
     "scripts": {
-      "start": "cd server && node ./bin/www",
+      "start": "cd server && npm start",
       "build": "cd client && npm run build",
       "install-client": "cd client && npm install",
       "heroku-postbuild": "npm run install-client && npm run build"
