--- a/client/.env.production
+++ b/client/.env.production
@@ -1,2 +1,2 @@
-REACT_APP_API_HOST_ADDRESS = TBD
+REACT_APP_API_HOST_ADDRESS = mongodb://spaik:S6#UV#bF7TMm5_z@ds163781.mlab.com:63781/heroku_lcxr6q5m
 REACT_APP_GOOGLE_API_KEY = AIzaSyAS-fELrXgdF_baRDKbnU50-aZ-UX3lrJo
