changed api host address to front end address

--- a/client/.env.production
+++ b/client/.env.production
@@ -1,2 +1,2 @@
-REACT_APP_API_HOST_ADDRESS = mongodb://spaik:w8UtLAaYN_veeSG@ds163781.mlab.com:63781/heroku_lcxr6q5m
+REACT_APP_API_HOST_ADDRESS = https://fuber-fullstack.herokuapp.com
 REACT_APP_GOOGLE_API_KEY = AIzaSyAS-fELrXgdF_baRDKbnU50-aZ-UX3lrJo
